2013-03-06  Dario Rodriguez <dario@artica.es>

	* operation/agentes/ver_agente.php: Adapted to new way to detect
	if an agent is a VMware entity.

	MERGED FROM 4.0.3

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_io.php, include/db/mysql.php: fixed warnings
	messages from PHP.
	
	Fixes: #3607014

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the lost ip in the
	audit when create the agent or module.

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: added tip for
	to note the module have another module intervals in the life of this
	maybe the sumattory is not correct.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_action.php: Put again
	a missed help hint for the action macros.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Change the update counts 
	of fired alerts when validate to do it only when the validation
	is of a unvalidated alert. This change is to avoid broke 
	counts

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: improved the style.
	
	* include/functions_reporting.php: fixed into the function
	"reporting_get_agentmodule_sla_array" when have one data of a
	module.
	
	Fixes: #3606811

2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added CPU
	and Process inventory change types to black list in default 
	SQL data script for bug 3606111

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: improved the style.
	
	* include/functions_reporting.php: fixed into the function